2003-12-17  Jeff Johnston  <jjohnstn@redhat.com>

	* generic/gdbtk-bp.c: Change calls to decode_line_1 to add
	new NULL parameter.
	* generic/gdbtk-cmds.c: Ditto.
	* generic/gdbtk-stack.c: Ditto.

2003-12-11  Jim Blandy  <jimb@redhat.com>

	* library/prefs.tcl (pref_read): The section marker or the word
	'option' must be the first thing on the line; they don't count if
	they appear in the middle of the line.

2003-11-24  David Carlton  <carlton@kealia.com>

	* generic/gdbtk.c (target_is_native): Replace STREQ by strcmp.
	* generic/gdbtk-cmds.c (gdb_stop): Replace STREQ by strcmp.
	(gdb_search): Replace STREQN by strncmp and DEPRECATED_SYMBOL_NAME
	by SYMBOL_LINKAGE_NAME.
	* generic/gdbtk-varobj.c (variable_format): Replace STREQN by
	strncmp.

2003-11-11  David Carlton  <carlton@kealia.com>

	* generic/gdbtk-bp.c (gdb_find_bp_at_addr): Replace use of
	BREAKPOINT->address by BREAKPOINT->loc->address.
	(gdb_get_breakpoint_info): Ditto.

2003-10-06  David Carlton  <carlton@kealia.com>

	* generic/gdbtk-register.c (get_register_size): Replace
	REGISTER_RAW_SIZE by DEPRECATED_REGISTER_RAW_SIZE.
	(get_register, register_changed_p): Ditto.

2003-09-30  David Carlton  <carlton@kealia.com>

	* generic/gdbtk-register.c (get_register): Replace
	REGISTER_VIRTUAL_SIZE by
	DEPRECATED_REGISTER_VIRTUAL_SIZE.

2003-09-08  Andrew Cagney  <cagney@redhat.com>

	* generic/gdbtk-cmds.c: Include "disasm.h".
	(gdbtk_load_asm): Use "gdb_print_insn" instead of
	TARGET_PRINT_INSN .
	(gdb_disassemble_driver): Delete code referencing
	"deprecated_tm_print_insn_info".  Delete "di" and "di_initialized"
	and any code initializing those variables.  Pass NULL as "di"
	parameter to "print_asm_fn".
	(disassemble_from_exec): Mention that it is unused.

2003-08-05  Andrew Cagney  <cagney@redhat.com>

	* generic/gdbtk-register.c (gdb_reggrouplist): Update, use
	reggroup_next.
	(gdb_reggroup): Ditto.

2003-08-04  David Carlton  <carlton@kealia.com>
