@@ -1,3 +1,12 @@
+2004-02-17  Martin Hunt  <hunt@redhat.com>
+
+	* generic/gdbtk-register.c (Gdbtk_Register_Init): Replace
+	calls to register_gdbarch_swap with deprecated_register_gdbarch_swap.
+
+	* library/srcwin.itb: Remove an apparently redundant call 
+	to gdbtk_locate_main and location. This actually broken
+	situations where no source files were found.
+
 2003-12-17  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* generic/gdbtk-bp.c: Change calls to decode_line_1 to add
